🔄 Hourly kanban sync: memory updates, tool changes

--- a/memory/2026-02-07.md
+++ b/memory/2026-02-07.md
@@ -68,6 +68,40 @@ python3 scripts/classify_task.py "Создай архитектуру JWT сис
 
 ---
 
+## Правило #2: Модели — экономичность ✅ ДОБАВЛЕНО (22:11)
+
+### Новое правило
+- **Основная модель**: Sonnet (баланс цена/качество)
+- **Opus 4.5**: ТОЛЬКО по явному запросу Вардгеса
+- **Smart Router**: автовыбор llama/sonnet/opus по задаче
+
+### Обновлено в MEMORY.md
+Добавлен раздел "Правило #2" в правила Бонда
+
+---
+
+---
+
+## GitHub Pages FIX ✅ РЕШЕНО (21:38)
+
+### Проблема
+Канбан не обновлялся 10+ минут. Model Router Skill не отображался.
+
+### Причина
+GitHub Pages настроен на папку `/docs`, а обновления делались в корне репозитория.
+
+### Решение
+1. Скопировал актуальные файлы: `cp index.html tasks.json docs/`
+2. GitHub Pages теперь показывает свежие данные
+3. Создал скрипт автосинхронизации: `sync-to-docs.sh`
+
+### Результат
+- ✅ Model Router Skill отображается
+- ✅ 3 колонки работают: Backlog → На проверке → Готово
+- ✅ Канбан обновляется корректно
+
+---
+
 ## Ожидаем от Вардгеса
 - [ ] Протестировать PDF после исправления
 - [ ] Notion API ключ для добавления гайда в базу
