--- a/memory/2026-02-08.md
+++ b/memory/2026-02-08.md
@@ -26,6 +26,35 @@
 ## 📅 НА ЗАВТРА (9 февраля):
 Вардгес хочет вернуться к задаче автопостинга @onlinetur24 — обсудить и возможно настроить заново
 
+## 🚀 ПРОДУКТОВАЯ ЛИНЕЙКА (20:33 МСК)
+Вардгес озвучил 3 продуктовых направления:
+
+1. **Курс "50 GPT-агентов"** — ✅ готов к запуску
+2. **Внедрение ИИ-агентов в бизнес** — B2B, как Бонд для других предпринимателей  
+3. **ИИ-блогер в Instagram** — обучение созданию аватара для заработка на рекламе (ПРИОРИТЕТ!)
+
+**Цель:** Определить порядок разработки и запуска
+
+## 🎯 ПРИВЛЕЧЕНИЕ КЛИЕНТОВ (20:34 МСК)
+Добавлено 2 направления по клиентам:
+
+4. **Партнерская программа** — сотрудничество с предпринимателями, комиссия за клиентов
+5. **Реактивация клиентской базы** — обзвон существующих клиентов из туризма для cross-sell ИИ-услуг
+
+**Преимущество:** есть репутация и доверие в туристическом сегменте
+
+## 📅 GOOGLE КАЛЕНДАРЬ ПОДКЛЮЧЁН (20:45 МСК)
+✅ **Успешно настроен google-workspace MCP**
+- 6 календарей доступны (включая vardges13@gmail.com)
+- Завтра: завтрак, тренировка с Максимом, обед, вывеска для турфирмы, ужин
+- Интеграция в утренние сводки + напоминания
+
+## 📋 ПРАВИЛО: АВТО-КАНБАН (20:50 МСК)
+Вардгес установил правило: если он упоминает задачу — автоматически добавляю в канбан-доску.
+- Фразы-триггеры: "добавь задачу", "нужно сделать", "поставь в план", etc.
+- Действие: tasks.json → git push → подтверждение
+- Без дополнительных вопросов!
+
 ## Контекст:
 Ранее сегодня было 3 автопоста:
 - 09:00 — горящие туры на выходные
